--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,9 @@
-@import "minima";
+--- 
+--- 
 
+@import
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
 
 .about-header {
     display: flex;
